syntax = "proto3";

option java_package = "com.qianxun.grpc.lib.sysMenu";

package sysMenu;

import public "google/protobuf/timestamp.proto";

service SysMenuService {
    rpc GetById (ByIdReq) returns (SysMenu) {
    }
    rpc GetList (GetListReq) returns (PageList) {
    }
    rpc Insert (BaseSysMenu) returns (Result) {
    }
    rpc Update (SysMenu) returns (Result) {
    }
    rpc Delete (ByIdReq) returns (Result) {
    }
}

message ByIdReq {
    int32 id = 1;
}

message GetListReq {
    int32 lang_id = 1;
    string query = 2;
    int32 page_size = 3;
    int32 page = 4;
}

message Result {
    bool success = 1;
}

// 新增时,使用的message,以保证用户不传入多余信息
message BaseSysMenu {
    int32 parent_id = 1;
    string menu_code = 2;
    string path = 3;
    string icon = 4;
    int32 sort = 5;
    int32 type = 6;
    int32 lang_id = 7;
    string name = 8;
}

message SysMenu {
    int32 id = 1;
    int32 parent_id = 2;
    string menu_code = 3;
    string path = 4;
    string icon = 5;
    int32 sort = 6;
    int32 type = 7;
    google.protobuf.Timestamp created_at = 8;
    google.protobuf.Timestamp updated_at = 9;
    int32 deleted = 10;
    int32 lang_id = 11;
    string name = 12;
}

message PageList {
    int32 total = 1;
    repeated SysMenu sys_menus = 2;
}
